--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -1,74 +1,84 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <link rel="icon" href="imgs/favicon.ico" />
 
     <title>Hakkımızda</title>
     <style>
-        @import url(css/fas.css);
-        @import url(css/place.css);
-        @import url(css/hakkimizda.css);
+      @import url(css/fas.css);
+      @import url(css/place.css);
+      @import url(css/hakkimizda.css);
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <nav>
-        <i class="fa-solid fa-chevron-left space-right cursor" onclick="javascript:location.href='index.html'" title="Geri dön"></i>
-        <div class="logo">
-            <i class="fas fa-hamburger icon-logo"></i>
-            <p>Menü Görmeden</p>
-        </div>
+      <i
+        class="fa-solid fa-chevron-left space-right cursor"
+        onclick="javascript:location.href='index.html'"
+        title="Geri dön"
+      ></i>
+      <div class="logo">
+        <i class="fas fa-hamburger icon-logo"></i>
+        <p>Menü Görmeden</p>
+      </div>
     </nav>
 
     <main>
-        <div class="hakkimizda-box">
-            <i class="fas fa-question"></i>
-            <h2>Menü Görmeden nedir ?</h2>
-            <p>
-                Menü Görmeden kullanıcıların mekanlar hakkındaki düşüncelerini eleştirilerini, yorumlarını mekan resimlerini ve menülerini paylaştığı bir sosyal platformdur
-            </p>
-        </div>
-        <div class="hakkimizda-box">
-            <i class="fas fa-question"></i>
-            <h2>Menü Görmeden ile ne yapabilirsin ?</h2>
-            <ul>
-                <li>
-                    Menü Görmeden ile en yakın mekanları ve menülerini görebilirsiniz.
-                </li>
-                <li>
-                    Gitiğiniz mekanları paylaşabilir ve bunlardan puan topluyabilirsiniz.
-                </li>
-            </ul>
-        </div>
-        <div class="hakkimizda-box">
-            <i class="fas fa-question"></i>
-            <h2>Menü Görmeden puanları ile ne yapabilirsin ?</h2>
-            <ul>
-                <li>
-                    Kazandığınız puanlar ile özel fırsatlar ve çekilişlerden yararlanabilirsiniz.
-                </li>
-            </ul>
-        </div>
-        <div class="hakkimizda-box">
-            <h2>İletişim</h2>
-            <h2>
-                <a href="mailto:google@google.com" style="font-size: 1.5rem">Eposta</a
+      <div class="hakkimizda-box">
+        <i class="fas fa-question"></i>
+        <h2>Menü Görmeden nedir ?</h2>
+        <p>
+          Menü Görmeden kullanıcıların mekanlar hakkındaki düşüncelerini
+          eleştirilerini, yorumlarını mekan resimlerini ve menülerini paylaştığı
+          bir sosyal platformdur
+        </p>
+      </div>
+      <div class="hakkimizda-box">
+        <i class="fas fa-question"></i>
+        <h2>Menü Görmeden ile ne yapabilirsin ?</h2>
+        <ul>
+          <li>
+            Menü Görmeden ile en yakın mekanları ve menülerini görebilirsiniz.
+          </li>
+          <li>
+            Gitiğiniz mekanları paylaşabilir ve bunlardan puan
+            topluyabilirsiniz.
+          </li>
+        </ul>
+      </div>
+      <div class="hakkimizda-box">
+        <i class="fas fa-question"></i>
+        <h2>Menü Görmeden puanları ile ne yapabilirsin ?</h2>
+        <ul>
+          <li>
+            Kazandığınız puanlar ile özel fırsatlar ve çekilişlerden
+            yararlanabilirsiniz.
+          </li>
+        </ul>
+      </div>
+      <div class="hakkimizda-box">
+        <h2>İletişim</h2>
+        <h2>
+          <a href="mailto:google@google.com" style="font-size: 1.5rem"
+            >Eposta</a
           >
         </h2>
         <h2>
           <a href="tel:+5555555555" style="font-size: 1.5rem">Telefon</a>
-            </h2>
-            <h2>
-                <a href="https://www.instagram.com/menugormeden/"><i class="fab fa-instagram" style="font-size: 1.5rem">
+        </h2>
+        <h2>
+          <a href="https://www.instagram.com/menugormeden/"
+            ><i class="fab fa-instagram" style="font-size: 1.5rem">
               instagram</i
             ></a
           >
         </h2>
         <h2>
-          <a href="https://www.facebook.com/Men%C3%BC-G%C3%B6rneden-100634366006010"
+          <a
+            href="https://www.facebook.com/Men%C3%BC-G%C3%B6rneden-100634366006010"
             ><i class="fab fa-facebook" style="font-size: 1.5rem">
               facebook</i
             ></a
